# FKLeetCode

./: .env.example  Makefile  README.md  docker-compose.yml  make.ps1
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3a5f287d1cfc_initial_setup_with_unique_titles.py  3d78ae26d8e6_improve_problem_variants.py  4cf2e7f46298_change_vector_size_to_768.py  790c788772a9_add_signature_columnto_avoid_drift.py  a26e6bf2670b_fix_problem_variants_schema.py  d2054f3c4d28_add_problem_id_to_sessions.py  d51eea5c1fa5_initial_tables.py
backend/app/: main.py
backend/app/api/: jobs.py  problems.py  sessions.py  submissions.py  variants.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  problem.py  session.py  submissions.py
backend/app/schemas/: jobs.py  judge.py  problem.py  sessions.py  submissions.py  variants.py
backend/app/services/: embeddings.py  judge_model.py  judge_service.py  llm.py  variant_service.py
backend/app/worker/: settings.py  tasks.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_api.py  test_quality_eval.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/api/: client.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/problems/: +page.svelte
frontend/src/routes/problems/[id]/: +page.svelte
frontend/src/routes/sessions/[id]/: +page.svelte
